--- a/webpage/HAL.html
+++ b/webpage/HAL.html
@@ -7,7 +7,10 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="./HAL_files/hal.css" rel="stylesheet" type="text/css">
     <script type="text/javascript">
-        !function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
+        !function (o, c) {
+            var n = c.documentElement, t = " w-mod-";
+            n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
+        }(window, document);
     </script>
     <link href="./HAL_files/hal_icon.png" rel="shortcut icon" type="image/x-icon">
     <link href="./HAL_files/hal_icon.png" rel="apple-touch-icon">
@@ -15,13 +18,13 @@
 <body class="body">
 <div class="container w-container">
     <div class="switch-group w-form">
-        <form id="switch-group" name="switch-group" data-name="On Off Switch" class="switch-group"><input type="submit"
-                                                                                                         value=""
-                                                                                                         data-wait=""
-                                                                                                         id="lock"
-                                                                                                         class="lock w-button">
+        <form id="switch-group" name="switch-group" data-name="On Off Switch" class="switch-group">
+            <label class="lock">
+                  <input type="checkbox">
+                <span class="button"></span>
+            </label>
             <label class="switch">
-                <input type="checkbox" >
+                <input type="checkbox">
                 <span class="slider"></span>
             </label>
         </form>
@@ -32,29 +35,18 @@
     <div class="w-form">
         <form id="email-form" name="email-form" data-name="Email Form">
             <div class="w-row">
-                <div class="w-col w-col-10 w-col-small-10 w-col-tiny-10"><textarea placeholder="Say something to HAL..."
-                                                                                   maxlength="5000" id="Input"
-                                                                                   name="Input" data-name="Input"
-                                                                                   autofocus="true"
-                                                                                   class="w-input"></textarea></div>
+                <div class="w-col w-col-10 w-col-small-10 w-col-tiny-10">
+                    <label for="Input"></label><textarea placeholder="Say something to HAL..."
+                                                         maxlength="5000" id="Input"
+                                                         name="Input" data-name="Input"
+                                                         autofocus="true"
+                                                         class="w-input"></textarea>
+                </div>
                 <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><input type="submit" value="" data-wait=""
                                                                              class="submit-button w-button"></div>
             </div>
         </form>
-        <div class="w-form-done">
-            <div>Thank you! Your submission has been received!</div>
-        </div>
-        <div class="w-form-fail">
-            <div>Oops! Something went wrong while submitting the form.</div>
-        </div>
     </div>
 </div>
-<script src="./HAL_files/jquery-3.5.1.min.dc5e7f18c8.js.last ned" type="text/javascript"
+<script src="./HAL_files/jquery-3.5.1.js" type="text/javascript"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="./HAL_files/webflow.734a8f509.js.last ned" type="text/javascript"></script>
-<!--[if lte IE 9]>
-<script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
-<a class="w-webflow-badge" href="https://webflow.com/?utm_campaign=brandjs"><img
-        src="./HAL_files/webflow-badge-icon.f67cd735e3.svg" alt="" style="margin-right: 8px; width: 16px;"><img
-        src="./HAL_files/webflow-badge-text.6faa6a38cd.svg" alt="Made in Webflow"></a></body>
-</html>
