Lock is now automatically locked

--- a/webpage/HAL.html
+++ b/webpage/HAL.html
@@ -20,7 +20,7 @@
     <div class="switch-group w-form">
         <form id="switch-group" name="switch-group" data-name="On Off Switch" class="switch-group">
             <label class="lock">
-                  <input type="checkbox">
+                  <input type="checkbox" checked>
                 <span class="button"></span>
             </label>
             <label class="switch">
@@ -39,7 +39,7 @@
                     <label for="Input"></label><textarea placeholder="Say something to HAL..."
                                                          maxlength="5000" id="Input"
                                                          name="Input" data-name="Input"
-                                                         autofocus="true"
+                                                         autofocus
                                                          class="w-input"></textarea>
                 </div>
                 <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><input type="submit" value="" data-wait=""
