--- a/webpage/HAL.html
+++ b/webpage/HAL.html
@@ -5,48 +5,102 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>HAL</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="./HAL_files/hal.css" rel="stylesheet" type="text/css">
+    <link href="HAL_files/hal.css" rel="stylesheet" type="text/css">
+    <script src="HAL_files/jquery-3.5.1.js" type="text/javascript"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script type="text/javascript">
         !function (o, c) {
             var n = c.documentElement, t = " w-mod-";
             n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
         }(window, document);
     </script>
-    <link href="./HAL_files/hal_icon.png" rel="shortcut icon" type="image/x-icon">
-    <link href="./HAL_files/hal_icon.png" rel="apple-touch-icon">
+    <link href="HAL_files/hal_icon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="HAL_files/hal_icon.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-<div class="container w-container">
-    <div class="switch-group w-form">
-        <form id="switch-group" name="switch-group" data-name="On Off Switch" class="switch-group">
-            <label class="lock">
-                  <input type="checkbox" checked>
-                <span class="button"></span>
-            </label>
-            <label class="switch">
-                <input type="checkbox">
-                <span class="slider"></span>
-            </label>
-        </form>
+<div id="background-img" class="fill background"></div>
+<audio id="startup" src="HAL_files/startup.mp3"></audio>
+<audio id="background-audio" src="HAL_files/ambient.mp3" loop></audio>
+<audio id="shutdown" src="HAL_files/shutdown.mp3"></audio>
+    <div class="container w-container">
+        <div class="switch-group w-form">
+            <form id="switch-group" name="switch-group" data-name="On Off Switch" class="switch-group">
+                <label class="lock">
+                    <input class="lock-box" type="checkbox" checked>
+                    <span class="button"></span>
+                </label>
+                <label class="switch">
+                    <input class="switch-box" type="checkbox" disabled>
+                    <span class="slider"></span>
+                </label>
+                <script>
+                    $('.lock-box').change(function () {
+                        const $child = $(this).closest('.switch-group').find('.switch-box');
+                        $child.prop('disabled', this.checked);
+                        const $switch = $(this).closest('.switch-group').find('.slider');
+                        if (this.checked) {
+                            $switch.css('cursor', 'not-allowed');
+                        } else {
+                            $switch.css('cursor', 'pointer');
+                        }
+                    });
+                </script>
+                <script>
+                    $('.switch-box').change(function () {
+                        const $background = $('#background-img');
+
+                        // sound effects
+                        const $ambient = $('#background-audio');
+                        const $shutdown = $('#shutdown');
+                        const $startup = $('#startup');
+
+                        if (this.checked) {
+                            const $lock = $(this).closest('.switch-group').find('.lock-box');
+                            $lock.prop('checked', true);
+                            $lock.change();
+                            $background.addClass('color');
+
+                            $shutdown.stop();
+                            $shutdown.currentTime = 0;
+
+                            $startup.play();
+                            $startup.onended = function() {
+                                $ambient.play();
+                            }
+                        } else {
+                            $startup.pause();
+                            $startup.currentTime = 0;
+
+                            $ambient.stop();
+                            $ambient.currentTime = 0;
+
+                            $shutdown.play();
+                            $background.removeClass('color');
+                        }
+                    })
+                </script>
+            </form>
+        </div>
+        <div id="conversation-div" class="conversation"></div>
     </div>
-    <div id="conversation-div" class="conversation"></div>
-</div>
-<div id="input-div" class="input">
-    <div class="w-form">
-        <form id="email-form" name="email-form" data-name="Email Form">
-            <div class="w-row">
-                <div class="w-col w-col-10 w-col-small-10 w-col-tiny-10">
-                    <label for="Input"></label><textarea placeholder="Say something to HAL..."
-                                                         maxlength="5000" id="Input"
-                                                         name="Input" data-name="Input"
-                                                         autofocus
-                                                         class="w-input"></textarea>
+    <div id="input-div" class="input">
+        <div class="w-form">
+            <form id="query-form" name="query" data-name="Query form" class="fill">
+                <div class="fill flex-container">
+                    <div class="fill flex-input">
+                        <label for="Input"></label>
+                        <textarea placeholder="Say something to HAL..."
+                                  maxlength="5000" id="Input"
+                                  name="Input" data-name="Input"
+                                  autofocus
+                                  class="fill w-input"></textarea>
+                    </div>
+                    <div class="fill flex-button">
+                        <input type="button" value="" data-wait=""
+                               class="submit-button w-button">
+                    </div>
                 </div>
-                <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><input type="submit" value="" data-wait=""
-                                                                             class="submit-button w-button"></div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
-</div>
-<script src="./HAL_files/jquery-3.5.1.js" type="text/javascript"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+</body>
